--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "github.copilot.enable": {
         "plaintext": true
-    }
+    },
+    "liveServer.settings.AdvanceCustomBrowserCmdLine": "",
+    "github.copilot.chat.githubMcpServer.enabled": false,
+    "liveServer.settings.CustomBrowser": "chrome"
 }
