--- a/Day-26/package.json
+++ b/Day-26/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-router",
+  "name": "package.json",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,14 +11,12 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
-    "gsap": "^3.14.2",
+    "antd": "^6.2.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^7.12.0"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@types/gsap": "^1.20.2",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
