--- a/Day-30-Admin_panel/package.json
+++ b/Day-30-Admin_panel/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.7",
     "@mui/styled-engine": "^7.3.7",
+    "chart.js": "^4.5.1",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0"
   },
